fix:mejores colores y adaptado a desktop

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <footer class="news_movements_container">
             <section class="check_news_container">
-                <p>Mercado de los creditos de carbono actual</p>
+                <p>¿Como usar los creditos?</p>
                 <div class="select_news_display">
                     <button>Compensacion</button>
                     <button>Productor</button>
@@ -25,7 +25,7 @@
                 <div class="information_news_selected">
                     <div></div>
                     <div>
-                        <p class="info_box_title">Compensar creditos de carbono</p>
+                        <p class="info_box_title"> creditos de carbono</p>
                         <p class="info_box_description">Como funciona la Compensacion, de manera breve; 2 lineas</p>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
     </section>
     <section class="graph_data_container">
         <header>
-            <h3 class="title_graph_display">Emisiores de Creditos</h3>
+            <h3 class="title_graph_display">Produtores en LATAM</h3>
             <div class="graph_selected">
                 <div class="graph_details_display">
                     <p>10</p>
