fix:dimensiones y estilos corregidos

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             <div class="box_our_news">
                 <img alt="text" src="https://letstalkscience.ca/sites/default/files/2020-01/Water_droplets_on_leaf.jpg"/>
                 <div> 
-                    <p>Descripcion Corto/ titulo de la publicacion</p>
-                    <p>Nombre de usuario</p>
+                    <p class="text_description_post">The market demand for Afforestation, Reforestation, and Revegetation (hashtag#ARR) Projects is on the rise, driven by their dual capacity to sequester significant CO₂ and restore degraded forest areas.</p>
+                    <p class="name_user_post">Nombre de usuario</p>
                 </div>
             </div>
             <div class="imagen_to_">
@@ -96,15 +96,13 @@
             El comercio de créditos de carbono de manera escalable y transparente se convierte en un requisito apremiante de los tiempos modernos y una buena oportunidad de negocio para las nuevas empresas GreenFi. Al utilizar nuestra solución de marca blanca para un mercado de créditos de carbono, obtiene un recurso basado en Ethereum altamente personalizable y listo para usar para ingresar al mercado rápidamente y recibir una ventaja competitiva tangible.
         </p>
         <div class="box_to_redict_user">
-           <p>nombre oficial del credito</p>
            <div class="box_to_buy_credits">
+            <p>Nombre Del credito actual</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim aut sit beatae a deserunt non accusamus corrupti inventore suscipit distinctio sint, alias soluta cumque, tempora, repudiandae impedit aspernatur praesentium vel.</p>
             <button class="btn_to_buy">Comprar</button>
            </div>
            <div class="box_to_show_exchanges">
-            <button>Pledge</button>
-            <button>ACX</button>
-            <button>Toucan</button>
+            <p class="exchanges_title">Exchanges</p>
             <button>GreenPlaces</button>
            </div>
 
