--- a/index.html
+++ b/index.html
@@ -5,108 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Start Up</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script defer src="script.js"></script>
 </head>
 <body class="page_contianer">
-    <section class="show_first_information">
-        <h1>Administra tus creditos de carbono en un solo lugar</h1>
-        <div class="carrusel_cotnainer">
-            <div class="background-animation"></div>
-        </div>
-        <footer class="news_movements_container">
-            <section class="check_news_container">
-                <p>¿Como usar los creditos?</p>
-                <div class="select_news_display">
-                    <button>Compensacion</button>
-                    <button>Productor</button>
-                    <button>Empresas</button>
-                </div>
-                <div class="information_news_selected">
-                    <div></div>
-                    <div>
-                        <p class="info_box_title"> creditos de carbono</p>
-                        <p class="info_box_description">Como funciona la Compensacion, de manera breve; 2 lineas</p>
-                    </div>
-                </div>
-            </section>
-            <section class="data_weekend_container">
-                <p>Estadisticas semanales</p>
-                <div>
-                    <div class="stadistics_week">
-                        <p>16m +</p>
-                        <p>creditos emitidos</p>
-                    </div>
-                    <div class="stadistics_week">
-                        <p>2.37$</p>
-                        <p>precio actual</p>
-                    </div>
-                    <div class="stadistics_week">
-                        <p>35</p>
-                        <p>proyectos actuales</p>
-                    </div>
-                    <div class="stadistics_week">
-                        <p>500.000</p>
-                        <p>produccion semanal</p>
-                    </div>
-                </div>
-            </section>
-        </footer>
-    </section>
-    <section class="graph_data_container">
-        <header>
-            <h3 class="title_graph_display">Produtores en LATAM</h3>
-            <div class="graph_selected">
-                <div class="graph_details_display">
-                    <p>10</p>
-                    <p>20</p>
-                    <p>30</p>
-                    <p>40</p>
-                    <div class="credits_bar_1"></div>
-                    <div class="credits_bar_2"></div>
-                    <div class="credits_bar_3"></div>
-                </div>
-            </div>
-            <div class="best_country_emisions">
-                <p>Paraguay - c</p>
-                <p>Argentina - c</p>
-                <p>Chile - c</p>
-            </div>
-        </header>
-        <footer class="last_information_container">
-            <p>Publicaciones Recientes (LinkedIn)</p>
-            <div class="box_our_news">
-                <img alt="text" src="https://letstalkscience.ca/sites/default/files/2020-01/Water_droplets_on_leaf.jpg"/>
-                <div> 
-                    <p class="text_description_post">The market demand for Afforestation, Reforestation, and Revegetation (hashtag#ARR) Projects is on the rise, driven by their dual capacity to sequester significant CO₂ and restore degraded forest areas.</p>
-                    <p class="name_user_post">Nombre de usuario</p>
-                </div>
-            </div>
-            <div class="imagen_to_">
-                imagen
-            </div>
-        </footer>
-    </section>
-    <section class="market_container">
-        <p class="title_market">
-            ¿Por que optar por los creditos de carbono?
-        </p>
-      
-        <p class="information_market_data">
-            El comercio de créditos de carbono de manera escalable y transparente se convierte en un requisito apremiante de los tiempos modernos y una buena oportunidad de negocio para las nuevas empresas GreenFi. Al utilizar nuestra solución de marca blanca para un mercado de créditos de carbono, obtiene un recurso basado en Ethereum altamente personalizable y listo para usar para ingresar al mercado rápidamente y recibir una ventaja competitiva tangible.
-        </p>
-        <div class="box_to_redict_user">
-           <div class="box_to_buy_credits">
-            <p>Nombre Del credito actual</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim aut sit beatae a deserunt non accusamus corrupti inventore suscipit distinctio sint, alias soluta cumque, tempora, repudiandae impedit aspernatur praesentium vel.</p>
-            <button class="btn_to_buy">Comprar</button>
-           </div>
-           <div class="box_to_show_exchanges">
-            <p class="exchanges_title">Exchanges</p>
-            <button>GreenPlaces</button>
-           </div>
-
-        </div>
-    </section>
+    <div id="container_canvas" class="section_1">
+        <canvas id="logoCanvas" class="canvas_target"></canvas>
+        <p>Texto de ejemplo</p>
+    </div>
+    <div id="container_canvas_section_2" class="section_2">
+        <canvas id="section_canvas_2" class="section_2_for_canvas">
+        </canvas>
+        <p>Gustavo<br/> y<br/> Katerine</p>
+    </div>
+    <div>
+        prueba
+    </div>
 </body>
 </html>
