--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
         <canvas id="logoCanvas" class="canvas_target"></canvas>
         <p>Texto de ejemplo</p>
     </div>
-    <div id="container_canvas_section_2" class="section_2">
-        <canvas id="section_canvas_2" class="section_2_for_canvas">
+    <div  class="section_2">
+        <canvas id="section_canvas_2" >
         </canvas>
         <p>Gustavo<br/> y<br/> Katerine</p>
     </div>
-    <div>
-        prueba
+    <div class="section_3">
+       <canvas id="section_canvas_3" class=""></canvas>
+       <div class="first_square"></div>
+       <div class="second_square"></div>
+       <img class="img_wedding" src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
+       <p class="section_3--wedding-text"></p>
     </div>
 </body>
 </html>
