feat:animation flowers add it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="page_contianer">
     <div id="container_canvas" class="section_1">
         <canvas id="logoCanvas" class="canvas_target"></canvas>
-        <p>Texto de ejemplo</p>
+        <p>Uno de los dias mas importantes en nuestras vidas esta por llegar, faltan:</p>
     </div>
     <div  class="section_2">
         <canvas id="section_canvas_2" >
@@ -19,10 +19,10 @@
     </div>
     <div class="section_3">
        <canvas id="section_canvas_3" class=""></canvas>
-       <div class="first_square"></div>
-       <div class="second_square"></div>
-       <img class="img_wedding" src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
-       <p class="section_3--wedding-text"></p>
+       <div ></div>
+       <div ></div>
+       <img  src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
+       <p ></p>
     </div>
 </body>
 </html>
