--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div  class="section_2">
         <canvas id="section_canvas_2" >
         </canvas>
+       <span></span>
         <p>Gustavo<br/> y<br/> Katerine</p>
     </div>
     <div class="section_3">
