animaciones de flores hechas

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div  class="section_2">
         <canvas id="section_canvas_2" >
         </canvas>
-       <span></span>
+       <span class="section_2-outer_circle"></span>
+       <span class="section_2-inner_circle"></span>
         <p>Gustavo<br/> y<br/> Katerine</p>
     </div>
     <div class="section_3">
