--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <div id="container_canvas" class="section_1">
         <canvas id="logoCanvas" class="canvas_target"></canvas>
         <p>Uno de los dias mas importantes en nuestras vidas esta por llegar, faltan:</p>
+        <div class="section_1--counter"><!--Agregar un canvas aqui dentro para las animaciones-->
+            <span>
+                <canvas class="circle_times_animation"></canvas>
+            </span>
+        </div>
     </div>
     <div  class="section_2">
         <canvas id="section_canvas_2" >
