diseño de contador 1

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         <canvas id="logoCanvas" class="canvas_target"></canvas>
         <p>Uno de los dias mas importantes en nuestras vidas esta por llegar, faltan:</p>
         <div class="section_1--counter"><!--Agregar un canvas aqui dentro para las animaciones-->
-            <span>
+            <div>
                 <canvas class="circle_times_animation"></canvas>
-            </span>
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
     </div>
     <div  class="section_2">
