copiar las animaciones de los circulos

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <p>Uno de los dias mas importantes en nuestras vidas esta por llegar, faltan:</p>
         <div class="section_1--counter"><!--Agregar un canvas aqui dentro para las animaciones-->
             <div>
-                <canvas class="circle_times_animation"></canvas>
+                <canvas class="circle_times_animation_1"></canvas>
             </div>
-            <div></div>
+            <div>
+                <canvas class="circle_times_animation_2"></canvas>
+            </div>
             <div></div>
             <div></div>
         </div>
