--- a/index.html
+++ b/index.html
@@ -13,13 +13,21 @@
         <p>Uno de los dias mas importantes en nuestras vidas esta por llegar, faltan:</p>
         <div class="section_1--counter"><!--Agregar un canvas aqui dentro para las animaciones-->
             <div>
+                <span></span>
                 <canvas class="circle_times_animation_1"></canvas>
             </div>
             <div>
+                <span></span>
                 <canvas class="circle_times_animation_2"></canvas>
             </div>
-            <div></div>
-            <div></div>
+            <div>
+                <span></span>
+                <canvas class="circle_times_animation_3"></canvas>
+            </div>
+            <div>
+                <span></span>
+                <canvas class="circle_times_animation_4"></canvas>
+            </div>
         </div>
     </div>
     <div  class="section_2">
