--- a/index.html
+++ b/index.html
@@ -44,5 +44,13 @@
        <img  src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
        <p ></p>
     </div>
+    <div class="section_4">
+        <canvas id="section_canvas_4"></canvas>
+        <span class="section_2-outer_circle"></span>
+        <span class="section_2-inner_circle"></span>
+        <p>
+            "El hombre que encuentra una mujer para amar ha encontrado la felicidad y la gracia de nuestro Señor"
+        </p>
+    </div>
 </body>
 </html>
