--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </canvas>
        <span class="section_2-outer_circle"></span>
        <span class="section_2-inner_circle"></span>
-        <p>Gustavo<br/> y<br/> Katerine</p>
+        <p>Gustavo<br/> E<br/> Katerine</p>
     </div>
     <div class="section_3">
        <canvas id="section_canvas_3" class=""></canvas>
@@ -46,8 +46,8 @@
     </div>
     <div class="section_4">
         <canvas id="section_canvas_4"></canvas>
-        <span class="section_2-outer_circle"></span>
-        <span class="section_2-inner_circle"></span>
+        <span class="section_4-outer_circle"></span>
+        <span class="section_4-inner_circle"></span>
         <p>
             "El hombre que encuentra una mujer para amar ha encontrado la felicidad y la gracia de nuestro Señor"
         </p>
