diseño cuarta hoja

--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
         </div>
     </div>
     <div  class="section_2">
-        <canvas id="section_canvas_2" >
-        </canvas>
-       <span class="section_2-outer_circle"></span>
-       <span class="section_2-inner_circle"></span>
+        <canvas id="section_canvas_2" ></canvas>
+       <span ></span>
+       <span ></span>
         <p>Gustavo<br/> E<br/> Katerine</p>
     </div>
     <div class="section_3">
@@ -46,8 +45,8 @@
     </div>
     <div class="section_4">
         <canvas id="section_canvas_4"></canvas>
-        <span class="section_4-outer_circle"></span>
-        <span class="section_4-inner_circle"></span>
+        <span ></span>
+        <span ></span>
         <p>
             "El hombre que encuentra una mujer para amar ha encontrado la felicidad y la gracia de nuestro Señor"
         </p>
