--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>Gustavo<br/> E<br/> Katerine</p>
     </div>
     <div class="section_3">
-       <canvas id="section_canvas_3" class=""></canvas>
+       <canvas id="section_canvas_3" ></canvas>
        <div ></div>
        <div ></div>
        <img  src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
@@ -50,6 +50,10 @@
         <p>
             "El hombre que encuentra una mujer para amar ha encontrado la felicidad y la gracia de nuestro Señor"
         </p>
+    </div>
+    <div class="section_5">
+        <canvas id="section_canvas_5"></canvas>
+
     </div>
 </body>
 </html>
