seccion 5 en progreso

--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
     </div>
     <div class="section_5">
         <canvas id="section_canvas_5"></canvas>
-
+        <div>
+            <p class="section_5--title">Con la bendicion de <br/> Dios y nuestros padres</p>
+            <p></p>
+            <p></p>
+        </div>
     </div>
 </body>
 </html>
