--- a/index.html
+++ b/index.html
@@ -55,8 +55,15 @@
         <canvas id="section_canvas_5"></canvas>
         <div>
             <p class="section_5--title">Con la bendicion de <br/> Dios y nuestros padres</p>
-            <p></p>
-            <p></p>
+            <p>Jesus Montoya Sanchez</p>
+            <div class="section_5--godparents_container">
+                <p>
+                    Nuestros padrinos
+                </p>
+                <p>
+                    Antonio Prado
+                </p>
+            </div>
         </div>
     </div>
 </body>
