--- a/index.html
+++ b/index.html
@@ -55,13 +55,20 @@
         <canvas id="section_canvas_5"></canvas>
         <div>
             <p class="section_5--title">Con la bendicion de <br/> Dios y nuestros padres</p>
-            <p>Jesus Montoya Sanchez</p>
             <div class="section_5--godparents_container">
-                <p>
+                <p class="section_5--names_persons">Jesus Montoya Sanchez</p>
+                <p class="section_5--names_persons">Jesus Montoya Sanchez</p>
+                <p class="section_5--names_persons">Jesus Montoya Sanchez</p>
+            </div>
+            <div class="section_5--godparents_container">
+                <p class="section_5--title">
                     Nuestros padrinos
                 </p>
-                <p>
-                    Antonio Prado
+                <p class="section_5--names_persons">
+                    Antonio Prado Cervantes
+                </p>
+                <p class="section_5--names_persons">
+                    Maria Chavez Macedo
                 </p>
             </div>
         </div>
