--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
         <div>
             <p class="section_5--title">Con la bendicion de <br/> Dios y nuestros padres</p>
             <div class="section_5--godparents_container">
-                <p class="section_5--names_persons">Jesus Montoya Sanchez</p>
-                <p class="section_5--names_persons">Jesus Montoya Sanchez</p>
-                <p class="section_5--names_persons">Jesus Montoya Sanchez</p>
+                <p class="section_5--names_persons"></p>
+                <p class="section_5--names_persons">Leonarda Alarcon Cespedes</p>
+                <p class="section_5--names_persons">Leonardo Monzon Gutierrez</p>
+                <p class="section_5--names_persons">Carmen Encis Solis</p>
             </div>
             <div class="section_5--godparents_container">
                 <p class="section_5--title">
