--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
             <p class="section_5--title">Con la bendicion de <br/> Dios y nuestros padres</p>
             <div class="section_5--godparents_container">
                 <p class="section_5--names_persons"></p>
-                <p class="section_5--names_persons">Leonarda Alarcon Cespedes</p>
-                <p class="section_5--names_persons">Leonardo Monzon Gutierrez</p>
-                <p class="section_5--names_persons">Carmen Encis Solis</p>
+                <p class="section_5--names_persons"></p>
+               
             </div>
             <div class="section_5--godparents_container">
                 <p class="section_5--title">
