--- a/index.html
+++ b/index.html
@@ -54,24 +54,30 @@
     <div class="section_5">
         <canvas id="section_canvas_5"></canvas>
         <div>
-            <p class="section_5--title">Con la bendicion de <br/> Dios y nuestros padres</p>
+            <h3 >Con la bendicion de <br/> Dios y nuestros padres</h3>
             <div class="section_5--godparents_container">
                 <p class="section_5--names_persons"></p>
+                <p class="section_5--names_persons"></p>  
                 <p class="section_5--names_persons"></p>
-               
+                <p class="section_5--names_persons"></p>               
             </div>
             <div class="section_5--godparents_container">
-                <p class="section_5--title">
+                <h3 >
                     Nuestros padrinos
+                </h3>
+                <p class="section_5--names_persons">
                 </p>
                 <p class="section_5--names_persons">
-                    Antonio Prado Cervantes
-                </p>
-                <p class="section_5--names_persons">
-                    Maria Chavez Macedo
                 </p>
             </div>
         </div>
+    </div>
+    <div class="section_6">
+        <canvas id="section_canvas_6"></canvas>
+        <div ></div>
+        <div ></div>
+        <img  src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
+        <p ></p>
     </div>
 </body>
 </html>
