--- a/index.html
+++ b/index.html
@@ -79,5 +79,8 @@
         <img  src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
         <p ></p>
     </div>
+    <div class="section_7">
+        <canvas id="section_canvas_7"></canvas>
+    </div>
 </body>
 </html>
