--- a/index.html
+++ b/index.html
@@ -81,6 +81,32 @@
     </div>
     <div class="section_7">
         <canvas id="section_canvas_7"></canvas>
+        <section>
+            <p class="section_7--title">K & G</p>
+            <div class="section_7--date">
+                <p>Sabado</p>
+                <div class="section_7--date_description">
+                    <p>Agosto</p>
+                    <p>12</p>
+                    <p>2023</p>
+                </div>
+                <p>11:30 a.m.</p>
+            </div>
+            <div class="section_7--description_event">
+                <h4>Ceremonia</h4>
+                <p>
+                    SANTUARIO MARIA AUXILIADORA<br/>
+                    DOB BOSCO - Carretera central 695<br/>
+                    Lurigancho - Chosica
+                </p>
+            </div>
+            <button class="section_7--see_map">VER MAPA</button>
+        </section>
+    </div>
+    <div class="section_8">
+        <canvas id="section_canvas_8"></canvas>
+
+        adsfasd
     </div>
 </body>
 </html>
