--- a/index.html
+++ b/index.html
@@ -105,8 +105,21 @@
     </div>
     <div class="section_8">
         <canvas id="section_canvas_8"></canvas>
+        <section>
+            <div class="section_8--container_info">
+                <p class="section_8--container_info_title">Recepcion - 6 pm</p>
+                <p class="section_8--container_description">
+                   Centro de recepciones<br/>
+                   "Club de Leones"<br/>
+                   Av. Arequipa 4701, Miraflores
+                </p>
+                <button>VER MAPA</button>
+                <div class="section_8--clothes">
+                    <p>Codigo de Vestimenta</p>
 
-        adsfasd
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
