--- a/index.html
+++ b/index.html
@@ -121,5 +121,11 @@
             </div>
         </section>
     </div>
+    <div class="section_9">
+        <canvas id="section_canvas_9"></canvas>
+        <section>
+            
+        </section>
+    </div>
 </body>
 </html>
