--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
     <div class="section_9">
         <canvas id="section_canvas_9"></canvas>
         <section>
-            
+            <p>Mesa de Regalos</p>
+            <p>Tu presencia es lo mas importante para nosotros</p>
+            <div></div>
         </section>
     </div>
 </body>
