--- a/index.html
+++ b/index.html
@@ -124,10 +124,37 @@
     <div class="section_9">
         <canvas id="section_canvas_9"></canvas>
         <section>
-            <p>Mesa de Regalos</p>
-            <p>Tu presencia es lo mas importante para nosotros</p>
-            <div></div>
+            <p class="section_9--title">Mesa de Regalos</p>
+            <p class="section_9--description">Tu presencia es lo mas importante para , pero si gustas hacer un regalo agradeceriamos sea por estas vias</p>
+            <div class="section_9--medias">
+                <div>
+                    <p>N° de cta. BCP: 131 3456 3345 2222</p>
+                    <button class="section_7--see_map">COPIAR</button>
+                </div>
+                <div>
+                    <p>CCI 4322 444 555 333 111</p>
+                    <button class="section_7--see_map">COPIAR</button>
+                </div>
+                <div>
+                    <p>NOVIOS FALABELLA</p>
+                    <button class="section_7--see_map">REGALAR</button>
+                </div>
+            </div>
         </section>
+    </div>
+    <div class="section_10">
+        <canvas id="section_canvas_10"></canvas>
+        <section>
+            <h3 class="section_10--title">Confirmar aistencia</h3>
+            <p class="section_10--description">Agradeceriamos contar con tu compañia un dia tan importante para nosotros, agradecemos que podamos confirmar tu asitencia antes del 18 de noviembre del 2023</p>
+            <button class="section_7--see_map">ASISTIR</button>
+        </section>
+    </div>
+    <div class="section_11">
+        <canvas id="section_canvas_11"></canvas>
+        <span ></span>
+       <span ></span>
+        <p>Gustavo<br/> E<br/> Katerine</p>
     </div>
 </body>
 </html>
