--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <canvas id="section_canvas_11"></canvas>
         <span ></span>
        <span ></span>
-        <p>Gustavo<br/> E<br/> Katerine</p>
+        <p>Gracias por ser parte de nuestra historia<br/> Te esperamos</p>
     </div>
 </body>
 </html>
