--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="section_8">
         <canvas id="section_canvas_8"></canvas>
         <section>
-            <div class="section_8--container_info">
+            <div >
                 <p class="section_8--container_info_title">Recepcion - 6 pm</p>
                 <p class="section_8--container_description">
                    Centro de recepciones<br/>
