--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
     <div class="section_10">
         <canvas id="section_canvas_10"></canvas>
         <section>
-            <h3 class="section_10--title">Confirmar aistencia</h3>
-            <p class="section_10--description">Agradeceriamos contar con tu compañia un dia tan importante para nosotros, agradecemos que podamos confirmar tu asitencia antes del 18 de noviembre del 2023</p>
+            <h3>Confirmar aistencia</h3>
+            <p >Agradeceriamos contar con tu compañia un dia tan importante para nosotros, agradecemos que podamos confirmar tu asitencia antes del 18 de noviembre del 2023</p>
             <button class="section_7--see_map">ASISTIR</button>
         </section>
     </div>
