--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <section>
             <h3>Confirmar aistencia</h3>
             <p >Agradeceriamos contar con tu compañia un dia tan importante para nosotros, agradecemos que podamos confirmar tu asitencia antes del 18 de noviembre del 2023</p>
-            <button class="section_7--see_map">ASISTIR</button>
+            <button>ASISTIR</button>
         </section>
     </div>
     <div class="section_11">
