--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
     </div>
     <div  class="section_2">
         <canvas id="section_canvas_2" ></canvas>
-       <span ></span>
-       <span ></span>
+       <span >
+            <div class="section_2--background_card">
+            </div>
+       </span>
+       <span >
+            <div class="section_2--background_card">
+            </div>
+       </span>
         <p>Gustavo<br/> E<br/> Katerine</p>
     </div>
     <div class="section_3">
@@ -45,8 +51,14 @@
     </div>
     <div class="section_4">
         <canvas id="section_canvas_4"></canvas>
-        <span ></span>
-        <span ></span>
+        <span >
+            <div class="section_2--background_card">
+            </div>
+        </span>
+        <span >
+            <div class="section_2--background_card">
+            </div>
+        </span>
         <p>
             "El hombre que encuentra una mujer para amar ha encontrado la felicidad y la gracia de nuestro Señor"
         </p>
