--- a/index.html
+++ b/index.html
@@ -164,8 +164,14 @@
     </div>
     <div class="section_11">
         <canvas id="section_canvas_11"></canvas>
-        <span ></span>
-       <span ></span>
+        <span >
+            <div class="section_2--background_card">
+            </div>
+        </span>
+       <span >
+            <div class="section_2--background_card">
+            </div>
+       </span>
         <p>Gracias por ser parte de nuestra historia<br/> Te esperamos</p>
     </div>
 </body>
