--- a/index.html
+++ b/index.html
@@ -13,19 +13,31 @@
         <p>Uno de los dias mas importantes en nuestras vidas esta por llegar, faltan:</p>
         <div class="section_1--counter"><!--Agregar un canvas aqui dentro para las animaciones-->
             <div>
-                <span></span>
+                <span>
+                    <div class="section_1--background_circle">
+                    </div>
+                </span>
                 <canvas class="circle_times_animation_1"></canvas>
             </div>
             <div>
-                <span></span>
+                <span>
+                    <div class="section_1--background_circle">
+                    </div>
+                </span>
                 <canvas class="circle_times_animation_2"></canvas>
             </div>
             <div>
-                <span></span>
+                <span>
+                    <div class="section_1--background_circle">
+                    </div>
+                </span>
                 <canvas class="circle_times_animation_3"></canvas>
             </div>
             <div>
-                <span></span>
+                <span>
+                    <div class="section_1--background_circle">
+                    </div>
+                </span>
                 <canvas class="circle_times_animation_4"></canvas>
             </div>
         </div>
@@ -48,6 +60,7 @@
        <div ></div>
        <img  src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
        <p ></p>
+       <img src="text_wedding.svg"  alt="nos casamos">
     </div>
     <div class="section_4">
         <canvas id="section_canvas_4"></canvas>
