--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
        <div ></div>
        <div ></div>
        <img  src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
-       <p ></p>
        <img src="text_wedding.svg"  alt="nos casamos">
     </div>
     <div class="section_4">
@@ -102,7 +101,7 @@
         <div ></div>
         <div ></div>
         <img  src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
-        <p ></p>
+       <img src="text_wedding.svg"  alt="nos casamos">
     </div>
     <div class="section_7">
         <canvas id="section_canvas_7"></canvas>
