--- a/index.html
+++ b/index.html
@@ -53,13 +53,17 @@
             </div>
        </span>
         <p>Gustavo<br/> E<br/> Katerine</p>
+        <img src="bg_stain.svg" alt="mancha">
+        <img src="bg_stain.svg" alt="mancha">
     </div>
     <div class="section_3">
        <canvas id="section_canvas_3" ></canvas>
        <div ></div>
        <div ></div>
-       <img  src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
+       <img src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
        <img src="text_wedding.svg"  alt="nos casamos">
+       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.svg" alt="mancha">
     </div>
     <div class="section_4">
         <canvas id="section_canvas_4"></canvas>
@@ -74,6 +78,8 @@
         <p>
             "El hombre que encuentra una mujer para amar ha encontrado la felicidad y la gracia de nuestro Señor"
         </p>
+       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.svg" alt="mancha">
     </div>
     <div class="section_5">
         <canvas id="section_canvas_5"></canvas>
@@ -95,6 +101,8 @@
                 </p>
             </div>
         </div>
+       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.svg" alt="mancha">
     </div>
     <div class="section_6">
         <canvas id="section_canvas_6"></canvas>
@@ -102,6 +110,8 @@
         <div ></div>
         <img  src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
        <img src="text_wedding.svg"  alt="nos casamos">
+       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.svg" alt="mancha">
     </div>
     <div class="section_7">
         <canvas id="section_canvas_7"></canvas>
@@ -126,6 +136,8 @@
             </div>
             <button class="section_7--see_map">VER MAPA</button>
         </section>
+       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.svg" alt="mancha">
     </div>
     <div class="section_8">
         <canvas id="section_canvas_8"></canvas>
@@ -144,6 +156,8 @@
                 </div>
             </div>
         </section>
+       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.svg" alt="mancha">
     </div>
     <div class="section_9">
         <canvas id="section_canvas_9"></canvas>
@@ -165,6 +179,8 @@
                 </div>
             </div>
         </section>
+       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.svg" alt="mancha">
     </div>
     <div class="section_10">
         <canvas id="section_canvas_10"></canvas>
@@ -173,6 +189,8 @@
             <p >Agradeceriamos contar con tu compañia un dia tan importante para nosotros, agradecemos que podamos confirmar tu asitencia antes del 18 de noviembre del 2023</p>
             <button>ASISTIR</button>
         </section>
+       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.svg" alt="mancha">
     </div>
     <div class="section_11">
         <canvas id="section_canvas_11"></canvas>
@@ -185,6 +203,8 @@
             </div>
        </span>
         <p>Gracias por ser parte de nuestra historia<br/> Te esperamos</p>
+       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.svg" alt="mancha">
     </div>
 </body>
 </html>
