--- a/index.html
+++ b/index.html
@@ -202,7 +202,10 @@
             <div class="section_2--background_card">
             </div>
        </span>
-        <p>Gracias por ser parte de nuestra historia<br/> Te esperamos</p>
+        <div>
+            <p>Gracias por ser parte de nuestra historia</p>
+            <h3>Te Esperamos</h3>
+        </div>
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
     </div>
