--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="section_2--background_card">
             </div>
        </span>
-        <p>Gustavo<br/> E<br/> Katerine</p>
+        <img src="names.svg" alt="nombres de casados">
         <img src="bg_stain.svg" alt="mancha">
         <img src="bg_stain.svg" alt="mancha">
     </div>
@@ -76,7 +76,7 @@
             </div>
         </span>
         <p>
-            "El hombre que encuentra una mujer para amar ha encontrado la felicidad y la gracia de nuestro Señor"
+            
         </p>
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
