--- a/index.html
+++ b/index.html
@@ -83,58 +83,26 @@
     </div>
     <div class="section_5">
         <canvas id="section_canvas_5"></canvas>
-        <div>
-            <h3 >Con la bendicion de <br/> Dios y nuestros padres</h3>
-            <div class="section_5--godparents_container">
-                <p class="section_5--names_persons"></p>
-                <p class="section_5--names_persons"></p>  
-                <p class="section_5--names_persons"></p>
-                <p class="section_5--names_persons"></p>               
+        <section>
+            <div class="section_5--container_info">
             </div>
-            <div class="section_5--godparents_container">
-                <h3 >
-                    Nuestros padrinos
-                </h3>
-                <p class="section_5--names_persons">
-                </p>
-                <p class="section_5--names_persons">
-                </p>
-            </div>
-        </div>
+        </section>
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
     </div>
     <div class="section_6">
         <canvas id="section_canvas_6"></canvas>
-        <div ></div>
-        <div ></div>
-        <img  src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
-       <img src="text_wedding.svg"  alt="nos casamos">
+        <section>hoadfs</section>
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
     </div>
     <div class="section_7">
         <canvas id="section_canvas_7"></canvas>
         <section>
-            <p class="section_7--title">K & G</p>
-            <div class="section_7--date">
-                <p>Sabado</p>
-                <div class="section_7--date_description">
-                    <p>Agosto</p>
-                    <p>12</p>
-                    <p>2023</p>
-                </div>
-                <p>11:30 a.m.</p>
+            <div class="section_7--container_info">
+                <img src="lugar.svg" alt="informacion" >
+                <button></button>
             </div>
-            <div class="section_7--description_event">
-                <h4>Ceremonia</h4>
-                <p>
-                    SANTUARIO MARIA AUXILIADORA<br/>
-                    DOB BOSCO - Carretera central 695<br/>
-                    Lurigancho - Chosica
-                </p>
-            </div>
-            <button class="section_7--see_map">VER MAPA</button>
         </section>
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
@@ -142,19 +110,8 @@
     <div class="section_8">
         <canvas id="section_canvas_8"></canvas>
         <section>
-            <div >
-                <p class="section_8--container_info_title">Recepcion - 6 pm</p>
-                <p class="section_8--container_description">
-                   Centro de recepciones<br/>
-                   "Club de Leones"<br/>
-                   Av. Arequipa 4701, Miraflores
-                </p>
-                <button>VER MAPA</button>
-                <div class="section_8--clothes">
-                    <p>Codigo de Vestimenta</p>
-
-                </div>
-            </div>
+           <img src="info_place.svg" alt="lugar de fiesta">
+           <button></button>
         </section>
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
