--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
             <div class="section_2--background_card">
             </div>
         </span>
-        <p>
-            
-        </p>
+        <p></p>
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
     </div>
@@ -119,20 +117,11 @@
     <div class="section_9">
         <canvas id="section_canvas_9"></canvas>
         <section>
-            <p class="section_9--title">Mesa de Regalos</p>
-            <p class="section_9--description">Tu presencia es lo mas importante para , pero si gustas hacer un regalo agradeceriamos sea por estas vias</p>
-            <div class="section_9--medias">
+            <div class="section_9--description">
+                <img src="assist.svg" alt="confirmar asistencia">
                 <div>
-                    <p>N° de cta. BCP: 131 3456 3345 2222</p>
-                    <button class="section_7--see_map">COPIAR</button>
-                </div>
-                <div>
-                    <p>CCI 4322 444 555 333 111</p>
-                    <button class="section_7--see_map">COPIAR</button>
-                </div>
-                <div>
-                    <p>NOVIOS FALABELLA</p>
-                    <button class="section_7--see_map">REGALAR</button>
+                    <button></button>
+                    <button></button>
                 </div>
             </div>
         </section>
@@ -141,28 +130,22 @@
     </div>
     <div class="section_10">
         <canvas id="section_canvas_10"></canvas>
-        <section>
-            <h3>Confirmar aistencia</h3>
-            <p >Agradeceriamos contar con tu compañia un dia tan importante para nosotros, agradecemos que podamos confirmar tu asitencia antes del 18 de noviembre del 2023</p>
-            <button>ASISTIR</button>
-        </section>
+        <div>
+            <span class="section_2--background_card"></span>
+        </div>
+        <div>
+            <span class="section_2--background_card"></span>
+        </div>
+        <p></p>
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
     </div>
     <div class="section_11">
         <canvas id="section_canvas_11"></canvas>
-        <span >
-            <div class="section_2--background_card">
-            </div>
-        </span>
-       <span >
-            <div class="section_2--background_card">
-            </div>
-       </span>
-        <div>
-            <p>Gracias por ser parte de nuestra historia</p>
-            <h3>Te Esperamos</h3>
-        </div>
+        <div ></div>
+       <div ></div>
+       <img src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
+       <img src="gift.svg"  alt="regalo">
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
     </div>
