--- a/index.html
+++ b/index.html
@@ -149,5 +149,26 @@
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
     </div>
+    <div class="section_12">
+        <canvas id="section_canvas_12"></canvas>
+        <section>
+            <div class="section_12--description">
+                    <p></p>
+            </div>
+        </section>
+       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.svg" alt="mancha">        
+    </div>
+    <div class="section_13">
+        <canvas id="section_canvas_13"></canvas>
+        <img src="hours.svg" alt="intineriario" class="img_hours">
+        <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.svg" alt="mancha">
+    </div>
+    <div class="section_14">
+        <canvas id="section_canvas_14"></canvas>
+        <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.svg" alt="mancha">
+    </div>
 </body>
 </html>
