--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
     </div>
     <div  class="section_2">
         <canvas id="section_canvas_2" ></canvas>
-       <span >
-            <div class="section_2--background_card">
-            </div>
-       </span>
-       <span >
-            <div class="section_2--background_card">
-            </div>
-       </span>
+       <div>
+            <span class="section_2--background_card">
+            </span>
+        </div>
+       <div>
+            <span class="section_2--background_card">
+            </span>
+        </div>
         <img src="names.svg" alt="nombres de casados">
         <img src="bg_stain.svg" alt="mancha">
         <img src="bg_stain.svg" alt="mancha">
@@ -167,8 +167,17 @@
     </div>
     <div class="section_14">
         <canvas id="section_canvas_14"></canvas>
+        <div>
+            <span class="section_2--background_card">
+            </span>
+        </div>
+       <div>
+            <span class="section_2--background_card">
+            </span>
+        </div>
         <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
+       <img src="final_invitation.svg" alt="final_invitation">
     </div>
 </body>
 </html>
