--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
        <canvas id="section_canvas_3" ></canvas>
        <div ></div>
        <div ></div>
-       <img src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
-       <img src="text_wedding.svg"  alt="nos casamos">
+       <img src="novios.png" alt="foto de la pareja">
+       <img src="casamos.svg"  alt="nos casamos">
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
     </div>
@@ -90,7 +90,9 @@
     </div>
     <div class="section_6">
         <canvas id="section_canvas_6"></canvas>
-        <section>hoadfs</section>
+        <section>
+            <img src="assist_date.svg" alt="asistencia">
+        </section>
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
     </div>
@@ -144,7 +146,7 @@
         <canvas id="section_canvas_11"></canvas>
         <div ></div>
        <div ></div>
-       <img src="https://media-api.xogrp.com/images/65e90b69-5287-4d55-aad4-4d385f225684~rs_768.h" alt="foto de la pareja">
+       <img src="novios.png" alt="foto de la pareja">
        <img src="gift.svg"  alt="regalo">
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
@@ -177,7 +179,7 @@
         </div>
         <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
-       <img src="final_invitation.svg" alt="final_invitation">
+       <img src="wait_here.svg" alt="final_invitation">
     </div>
 </body>
 </html>
